AG-48918 build before test in gh workflow
Squashed commit of the following:

commit 0d8e34417279701df450ec9b60f5ce1e299bfb2e
Author: slvvko <v.leleka@adguard.com>
Date:   Fri Nov 28 02:20:44 2025 -0500

    build before test in gh workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,12 +47,16 @@ jobs:
           node-version: ${{ env.NODE_VERSION }}
           registry-url: https://registry.npmjs.org
           cache: pnpm
-      
+
       - name: Install dependencies
         run: pnpm install
 
       - name: Run ESLint
         run: pnpm lint
+
+      # building is needed for tests (bundle test depends on it)
+      - name: Build package
+        run: pnpm build
 
       - name: Run tests
         run: pnpm test
